fix: Removing html elem styling overflow hidden

--- a/src/style/layout/_layout.scss
+++ b/src/style/layout/_layout.scss
@@ -8,7 +8,6 @@
 
 html {
   scrollbar-width: none;
-  overflow: hidden;
 }
 
 header {
